source/stylesheets/_header.css.scss
@import "compass/css3/transition";

header {
  @include flexbox((
    display: flex
  ));
  @include align-items(center);
  border: solid 0px $fokchow-gold;
  border-bottom-width: 5px;

  img.logo {
    @include border-radius(90px);
    height: 90px;
    width: 90px;
    margin: 1.5em;
    margin-right: 0;
    @include box-shadow(0px 0px 24px rgba(10, 10, 10, 0.55));
  }

  .menu {
    margin: 0;
    padding: 0;
    @include flexbox((
      display: flex,
      flex: 1,
      justify-content: center
    ));

    .section {
      @include border-radius(0.5em);
      text-transform: uppercase;
      font-size: 1.5em;

      a.title {
        padding: 0.8em;
        display: block;
        opacity: 0.8;
      }

      @include transition(.2s ease-in-out);
      @include transition-property(color, text-shadow);

      &.active, &:hover {
        a.title {
          @include text-shadow(0px 1px 3px rgba(10, 10, 10, 0.55));
          color: $fokchow-gold;
        }
      }

      &.active {
        a.title { opacity: 0.7; }
      }


      &:hover {
        a.title { opacity: 0.6; }
      }

      &.products {
        .products_list {
          @include border-radius(0.5em);
          font-size: 0.8em;
          margin: 0;
          padding: 1em;
          visibility: hidden;
          opacity: 0;
          position: fixed;
          @include chinese-symbol-background();
          @include transition(.2s ease-in-out);
          @include transition-property(opacity, visibility);
          @include box-shadow(0px 0px 24px rgba(10, 10, 10, 0.55));

          .product-name {
            @include text-shadow(0px 1px 1px rgba(10, 10, 10, 0.55));
            &:hover {
              opacity: 0.6;
              @include transition(.1s ease-in-out);
              @include transition-property(opacity);
            }
          }
        }

        &#products-menu:target, &:hover {
          .products_list {
            visibility: visible;
            opacity: 1;
          }
        }
      }
    }
  }
}

